tests/base/valid/Print_Valid_1.whiley
import * from whiley.lang.*

void ::main(System sys,[string] args):
     sys.out.println(Any.toString(1))
