tests/base/invalid/Function_CompileFail_4.whiley
import * from whiley.lang.*

int f(int x):
    sys.out.println(toString(x))

void ::main(System sys,[string] args):
    f(1)
